--- a/app.json
+++ b/app.json
@@ -70,7 +70,7 @@
       },      
       "START_IMG_URL": {
         "description": "Telegraph Image URL For Start Command",
-        "value": "https://telegra.ph/file/e17f42bc195635b668d6d.jpg",
+        "value": "https://telegra.ph/file/e4f889bdfa3a046809390.mp4",
         "required": true
       }
     },
