--- a/app.json
+++ b/app.json
@@ -70,7 +70,7 @@
       },      
       "START_IMG_URL": {
         "description": "Telegraph Image URL For Start Command",
-        "value": "https://telegra.ph/file/e4f889bdfa3a046809390.mp4",
+        "value": "https://telegra.ph/file/3242e7e9ac3f1b43b3e77.jpg",
         "required": true
       }
     },
